force-app/main/default/objects/Relief_Valve__c/fields/Pilot_Supply_Filter__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Supply_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pilot Supply Filter</label>
    <type>Checkbox</type>
</CustomField>