force-app/main/default/objects/Relief_Valve__c/fields/Pilot_Valves_option__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Valves_option__c</fullName>
    <label>Pilot  Valves option</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Manual Blowdown</fullName>
            </value>
            <value>
                <fullName>Remote Sense</fullName>
            </value>
            <value>
                <fullName>Pilot Exhaust Piped to Discharge Header</fullName>
            </value>
            <value>
                <fullName>Field Test Connection</fullName>
            </value>
            <value>
                <fullName>Pilot Supply Filter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>