force-app/main/default/objects/Relief_Valve__c/fields/PosKD__c.field-meta.xml
<CustomField>
    <fullName>PosKD__c</fullName>
    <label>PosKD</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>