force-app/main/default/objects/Relief_Valve__c/fields/PosKDHigh__c.field-meta.xml
<CustomField>
    <fullName>PosKDHigh__c</fullName>
    <label>PosKDHigh</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>