force-app/main/default/objects/Relief_Valve__c/fields/PosKDLow__c.field-meta.xml
<CustomField>
    <fullName>PosKDLow__c</fullName>
    <label>PosKDLow</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>