force-app/main/default/objects/Relief_Valve__c/fields/PosPresRatioHigh__c.field-meta.xml
<CustomField>
    <fullName>PosPresRatioHigh__c</fullName>
    <label>PosPresRatioHigh</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>