force-app/main/default/objects/Relief_Valve__c/fields/PosPresRatioLow__c.field-meta.xml
<CustomField>
    <fullName>PosPresRatioLow__c</fullName>
    <label>PosPresRatioLow</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>