force-app/main/default/objects/Relief_Valve__c/fields/PosSetPresOSIG__c.field-meta.xml
<CustomField>
    <fullName>PosSetPresOSIG__c</fullName>
    <label>PosSetPresOSIG</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>