force-app/main/default/objects/Relief_Valve__c/fields/Pressure_Direction__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Direction__c</fullName>
    <label>Pressure Direction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>