force-app/main/default/objects/Relief_Valve__c/fields/Pressure_Pallet_Material__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Pallet_Material__c</fullName>
    <label>Pressure Pallet Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>