force-app/main/default/objects/Relief_Valve__c/fields/Pressure_Port_Proximity_Sensor__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Port_Proximity_Sensor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pressure Port Proximity Sensor</label>
    <type>Checkbox</type>
</CustomField>