force-app/main/default/objects/Relief_Valve__c/fields/Pressure_Relief_Req_Flow_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Relief_Req_Flow_Rate__c</fullName>
    <label>Pressure Relief Required Flow Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>