force-app/main/default/objects/Relief_Valve__c/fields/Pressure_Relief_Req_Flow_Units__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Relief_Req_Flow_Units__c</fullName>
    <label>Pressure Relief Required Flow Rate Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flow_Rate_Units</valueSetName>
    </valueSet>
</CustomField>