force-app/main/default/objects/Relief_Valve__c/fields/Pressure_Relieving_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Relieving_Temperature__c</fullName>
    <inlineHelpText>This temperature is used for flow calculation purpose only. It is not used in restricting material of construction.</inlineHelpText>
    <label>Pressure Relieving Temperature Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>