force-app/main/default/objects/Relief_Valve__c/fields/Pressure_Relieving_Temperature_Units__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Relieving_Temperature_Units__c</fullName>
    <label>Pressure Relieving Temperature UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Temperature_Units</valueSetName>
    </valueSet>
</CustomField>