force-app/main/default/objects/Relief_Valve__c/fields/Pressure_Setting_Units__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Setting_Units__c</fullName>
    <label>Pressure Setting Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pressure_Units</valueSetName>
    </valueSet>
</CustomField>