force-app/main/default/objects/Relief_Valve__c/fields/Price_Engineer_Override__c.field-meta.xml
<CustomField>
    <fullName>Price_Engineer_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Engineer Override</label>
    <type>Checkbox</type>
</CustomField>