force-app/main/default/objects/Relief_Valve__c/fields/Quote_Description_Engineer_Override__c.field-meta.xml
<CustomField>
    <fullName>Quote_Description_Engineer_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Description Engineer Override</label>
    <type>Checkbox</type>
</CustomField>