force-app/main/default/objects/Relief_Valve__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Relief Valves</relationshipLabel>
    <relationshipName>Relief_Valves</relationshipName>
    <type>Lookup</type>
</CustomField>