force-app/main/default/objects/Relief_Valve__c/fields/Relief_Type__c.field-meta.xml
<CustomField>
    <fullName>Relief_Type__c</fullName>
    <label>Relief Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pressure</fullName>
            </value>
            <value>
                <fullName>Vacuum</fullName>
            </value>
            <value>
                <fullName>Pressure &amp; Vacuum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>