force-app/main/default/objects/Relief_Valve__c/fields/Remote_Sense__c.field-meta.xml
<CustomField>
    <fullName>Remote_Sense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Sense</label>
    <type>Checkbox</type>
</CustomField>