force-app/main/default/objects/Relief_Valve__c/fields/Remote_Sense_Backend__c.field-meta.xml
<CustomField>
    <fullName>Remote_Sense_Backend__c</fullName>
    <formula>IF(Remote_Sense__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remote Sense Backend</label>
    <type>Text</type>
</CustomField>