force-app/main/default/objects/Relief_Valve__c/fields/Schedule_BaseLead__c.field-meta.xml
<CustomField>
    <fullName>Schedule_BaseLead__c</fullName>
    <description>To get Schedule from BaseLead Table to calculate Lead Time</description>
    <label>Schedule_BaseLead</label>
    <length>50</length>
    <type>Text</type>
</CustomField>