force-app/main/default/objects/Relief_Valve__c/fields/Seat_Material__c.field-meta.xml
<CustomField>
    <fullName>Seat_Material__c</fullName>
    <label>Seat Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>