force-app/main/default/objects/Relief_Valve__c/fields/Section_C_Flag__c.field-meta.xml
<CustomField>
    <fullName>Section_C_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section C Flag</label>
    <type>Checkbox</type>
</CustomField>