force-app/main/default/objects/Relief_Valve__c/fields/Section_F_Flag__c.field-meta.xml
<CustomField>
    <fullName>Section_F_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section F Flag</label>
    <type>Checkbox</type>
</CustomField>