force-app/main/default/objects/Relief_Valve__c/fields/Shell_Test_Valve_Body__c.field-meta.xml
<CustomField>
    <fullName>Shell_Test_Valve_Body__c</fullName>
    <inlineHelpText>Description of Hydrostatic Test of Cast Components: Hydrostatic shell testing of cast main pressure containing components per EDD-1002 on 100% of the quantity of the order with 10% witnessed by Groth quality department</inlineHelpText>
    <label>Shell Test - Valve Body</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIR</fullName>
                <default>true</default>
                <label>Pneumatic Pressure Test of Finished Valve Assy</label>
            </value>
            <value>
                <fullName>HYDRO</fullName>
                <label>Pneumatic Pressure Test of Finished Valve Assy + Hydrostatic Test of Cast Components</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>