force-app/main/default/objects/Relief_Valve__c/fields/Size_Preference__c.field-meta.xml
<CustomField>
    <fullName>Size_Preference__c</fullName>
    <label>Size Preference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>