force-app/main/default/objects/Relief_Valve__c/fields/Smallest__c.field-meta.xml
<CustomField>
    <fullName>Smallest__c</fullName>
    <label>Smallest</label>
    <length>50</length>
    <type>Text</type>
</CustomField>