force-app/main/default/objects/Relief_Valve__c/fields/Split_Overpressure__c.field-meta.xml
<CustomField>
    <fullName>Split_Overpressure__c</fullName>
    <label>Split Overpressure</label>
    <length>50</length>
    <type>Text</type>
</CustomField>