force-app/main/default/objects/Relief_Valve__c/fields/Spring_Material__c.field-meta.xml
<CustomField>
    <fullName>Spring_Material__c</fullName>
    <label>Spring Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>