force-app/main/default/objects/Relief_Valve__c/fields/StdPosAirFlowSCFH__c.field-meta.xml
<CustomField>
    <fullName>StdPosAirFlowSCFH__c</fullName>
    <label>StdPosAirFlowSCFH</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>