force-app/main/default/objects/Relief_Valve__c/fields/StdPosKd__c.field-meta.xml
<CustomField>
    <fullName>StdPosKd__c</fullName>
    <label>StdPosKd</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>