force-app/main/default/objects/Relief_Valve__c/fields/StdPosPresRatio__c.field-meta.xml
<CustomField>
    <fullName>StdPosPresRatio__c</fullName>
    <label>StdPosPresRatio</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>