force-app/main/default/objects/Relief_Valve__c/fields/StdVacAirFlowSCFH__c.field-meta.xml
<CustomField>
    <fullName>StdVacAirFlowSCFH__c</fullName>
    <label>StdVacAirFlowSCFH</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>