force-app/main/default/objects/Relief_Valve__c/fields/StdVacKd__c.field-meta.xml
<CustomField>
    <fullName>StdVacKd__c</fullName>
    <label>StdVacKd</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>