force-app/main/default/objects/Relief_Valve__c/fields/StdVacPresRatio__c.field-meta.xml
<CustomField>
    <fullName>StdVacPresRatio__c</fullName>
    <label>StdVacPresRatio</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>