force-app/main/default/objects/Relief_Valve__c/fields/Steam_Jacket_Material__c.field-meta.xml
<CustomField>
    <fullName>Steam_Jacket_Material__c</fullName>
    <label>Steam Jacket Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>