force-app/main/default/objects/Relief_Valve__c/fields/Temperature_Units__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Units__c</fullName>
    <label>Temperature Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Temperature_Units</valueSetName>
    </valueSet>
</CustomField>