force-app/main/default/objects/Relief_Valve__c/fields/Type_of_model__c.field-meta.xml
<CustomField>
    <fullName>Type_of_model__c</fullName>
    <label>Narrow model choice by venting method?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FV</fullName>
                <label>Free Vented</label>
            </value>
            <value>
                <fullName>PA</fullName>
                <label>Pipe Away</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>