force-app/main/default/objects/Relief_Valve__c/fields/Type_of_overpressure_valve__c.field-meta.xml
<CustomField>
    <fullName>Type_of_overpressure_valve__c</fullName>
    <label>Overpressure design</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>10%</label>
            </value>
            <value>
                <fullName>100</fullName>
                <default>true</default>
                <label>100%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>