force-app/main/default/objects/Relief_Valve__c/fields/Ultrasonic_Examination__c.field-meta.xml
<CustomField>
    <fullName>Ultrasonic_Examination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ultrasonic Examination</label>
    <type>Checkbox</type>
</CustomField>