force-app/main/default/objects/Relief_Valve__c/fields/V_Compressibility_Factor__c.field-meta.xml
<CustomField>
    <fullName>V_Compressibility_Factor__c</fullName>
    <label>Compressibility Factor</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>