force-app/main/default/objects/Relief_Valve__c/fields/V_Converted_Relieving_Vacuum_Value__c.field-meta.xml
<CustomField>
    <fullName>V_Converted_Relieving_Vacuum_Value__c</fullName>
    <label>Converted Relieving Vacuum Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>