force-app/main/default/objects/Relief_Valve__c/fields/V_Customer_Specified_Media_Name__c.field-meta.xml
<CustomField>
    <fullName>V_Customer_Specified_Media_Name__c</fullName>
    <label>Customer Specified Media Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>