force-app/main/default/objects/Relief_Valve__c/fields/V_Enter_Relieving_Vacuum_units__c.field-meta.xml
<CustomField>
    <fullName>V_Enter_Relieving_Vacuum_units__c</fullName>
    <label>Relieving Vacuum Value UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pressure_Units</valueSetName>
    </valueSet>
</CustomField>