force-app/main/default/objects/Relief_Valve__c/fields/V_Overpressure_Vacuum_Value__c.field-meta.xml
<CustomField>
    <fullName>V_Overpressure_Vacuum_Value__c</fullName>
    <inlineHelpText>Enter either the relieving vacuum or %overpressure vacuum. The % overpressure field is available after entering 0 for the relieving vacuum, and is overridden if the relieving vacuum is changed to a non-zero value</inlineHelpText>
    <label>% Overpressure Vacuum Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>