force-app/main/default/objects/Relief_Valve__c/fields/V_Ratio_of_Specific_Heats__c.field-meta.xml
<CustomField>
    <fullName>V_Ratio_of_Specific_Heats__c</fullName>
    <label>Ratio of Specific Heats</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>