force-app/main/default/objects/Relief_Valve__c/fields/V_Vacuum_Relieving_Temperature__c.field-meta.xml
<CustomField>
    <fullName>V_Vacuum_Relieving_Temperature__c</fullName>
    <label>Vacuum Relieving Temperature</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>