force-app/main/default/objects/Relief_Valve__c/fields/V_Vacuum_Relieving_Temperature_Units__c.field-meta.xml
<CustomField>
    <fullName>V_Vacuum_Relieving_Temperature_Units__c</fullName>
    <label>Vacuum Relieving Temperature UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Temperature_Units</valueSetName>
    </valueSet>
</CustomField>