force-app/main/default/objects/Relief_Valve__c/fields/VacKDHigh__c.field-meta.xml
<CustomField>
    <fullName>VacKDHigh__c</fullName>
    <label>VacKDHigh</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>