force-app/main/default/objects/Relief_Valve__c/fields/VacKDLow__c.field-meta.xml
<CustomField>
    <fullName>VacKDLow__c</fullName>
    <label>VacKDLow</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>