force-app/main/default/objects/Relief_Valve__c/fields/VacPresRatioHigh__c.field-meta.xml
<CustomField>
    <fullName>VacPresRatioHigh__c</fullName>
    <label>VacPresRatioHigh</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>