force-app/main/default/objects/Relief_Valve__c/fields/VacPresRatioLow__c.field-meta.xml
<CustomField>
    <fullName>VacPresRatioLow__c</fullName>
    <label>VacPresRatioLow</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>