force-app/main/default/objects/Relief_Valve__c/fields/VacSetPresOSIG__c.field-meta.xml
<CustomField>
    <fullName>VacSetPresOSIG__c</fullName>
    <label>VacSetPresOSIG</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>