force-app/main/default/objects/Relief_Valve__c/fields/Vacuum_Media__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_Media__c</fullName>
    <label>Vacuum Media</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gas List</fullName>
            </value>
            <value>
                <fullName>Liquid List</fullName>
            </value>
            <value>
                <fullName>Steam</fullName>
            </value>
            <value>
                <fullName>Customer Specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>