force-app/main/default/objects/Relief_Valve__c/fields/Vacuum_Pallet_Material__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_Pallet_Material__c</fullName>
    <label>Vacuum Pallet Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>