force-app/main/default/objects/Relief_Valve__c/fields/Vacuum_Port_Option__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_Port_Option__c</fullName>
    <label>Vacuum Port Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>