force-app/main/default/objects/Relief_Valve__c/fields/Vacuum_Port_Proximity_Sensor__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_Port_Proximity_Sensor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vacuum Port Proximity Sensor</label>
    <type>Checkbox</type>
</CustomField>