force-app/main/default/objects/Relief_Valve__c/fields/Vacuum_Port_Proximity_Sensor_Backend__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_Port_Proximity_Sensor_Backend__c</fullName>
    <formula>IF(Vacuum_Port_Proximity_Sensor__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vacuum Port Proximity Sensor Backend</label>
    <type>Text</type>
</CustomField>