force-app/main/default/objects/Relief_Valve__c/fields/Vacuum_Relief_Req_Flow__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_Relief_Req_Flow__c</fullName>
    <label>Vacuum Relief Required Flow Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>