force-app/main/default/objects/Relief_Valve__c/fields/Vacuum_Relief_Required_Flow_Units__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_Relief_Required_Flow_Units__c</fullName>
    <label>Vacuum Relief Required Flow Rate UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flow_Rate_Units</valueSetName>
    </valueSet>
</CustomField>