force-app/main/default/objects/Relief_Valve__c/fields/Vacuum_Setting__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_Setting__c</fullName>
    <label>Vacuum Setting</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>