force-app/main/default/objects/Relief_Valve__c/fields/Vacuum_Setting_Units__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_Setting_Units__c</fullName>
    <label>Vacuum Setting Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pressure_Units</valueSetName>
    </valueSet>
</CustomField>