force-app/main/default/objects/Relief_Valve__c/fields/Visual_Casting_Examination__c.field-meta.xml
<CustomField>
    <fullName>Visual_Casting_Examination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visual Casting Examination</label>
    <type>Checkbox</type>
</CustomField>