force-app/main/default/objects/Relief_Valve__c/fields/Weight_Material__c.field-meta.xml
<CustomField>
    <fullName>Weight_Material__c</fullName>
    <label>Weight Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>