force-app/main/default/objects/Relief_Valve__c/fields/Working_days_GP__c.field-meta.xml
<CustomField>
    <fullName>Working_days_GP__c</fullName>
    <label>Working days GP</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>