force-app/main/default/objects/Relief_Valve__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <inlineHelpText>Zone 0:A place in which explosive atmosphere is continually present
Zone 1:  A place in which explosive atmosphere is likely to occur in normal operation occasionally
Zone 2: A place in which explosive atmosphere is not likely to occur in normal</inlineHelpText>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>