force-app/main/default/objects/Relief_Valve__c/validationRules/Body_Coating_Material_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Body_Coating_Material_Validation</fullName>
    <active>true</active>
    <description>Body Coating Material is Mandatory</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISBLANK(Body_Coating_Material__c ),
(Section_F_Flag__c = TRUE)
)</errorConditionFormula>
    <errorDisplayField>Body_Coating_Material__c</errorDisplayField>
    <errorMessage>Please select a value from the drop down</errorMessage>
</ValidationRule>