force-app/main/default/objects/Relief_Valve__c/validationRules/Compressibility_Factor_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>Compressibility_Factor_Constraint</fullName>
    <active>true</active>
    <description>Compressibility Factor is a Mandatory field based on certain Evaluation Per Selections.</description>
    <errorConditionFormula>AND(
OR(ISPICKVAL(Relief_Type__c, &quot;Pressure&quot;),
ISPICKVAL(Relief_Type__c, &quot;Pressure &amp; Vacuum&quot;)),
Atmospheric_Pressure__c &gt; 0,
ISPICKVAL(Media_Type__c,&quot;Customer Specified&quot;),
NOT(ISBLANK(Customer_Specified_Media_Name__c)),
NOT(ISBLANK (Ratio_of_Specific_Heats__c )),
NOT(ISBLANK (Molecular_Weight__c)),
ISBLANK(Compressibility_Factor__c),
Section_B_Flag__c  = TRUE)</errorConditionFormula>
    <errorDisplayField>Compressibility_Factor__c</errorDisplayField>
    <errorMessage>Compressibility Factor (Z) : Please enter a value</errorMessage>
</ValidationRule>